--- a/12_connected_component_labeling.ipynb
+++ b/12_connected_component_labeling.ipynb
@@ -9,7 +9,7 @@
     "<br>\n",
     "The classical approach<br>\n",
     "\n",
-    "ref paper: https://gurus.pyimagesearch.com/wp-content/uploads/2015/08/rosenfeld-1966.pdf"
+    "Reference: https://www.cs.virginia.edu/~jlp/66.sequential.op.pdf"
    ]
   },
   {
@@ -475,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
